--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -22,6 +22,10 @@ arb:
         # pregnant: "Surveillance de la gestation"
       animal_race:
         # code: "Code race"
+      animal_treatment_use:
+        # drug_admission_path: "Voie d’admission"
+        # per_animal_unit: " / "
+        # quantity_unit: "Unité"
       area:  #?
         code: "الرمز الداخلي" #?
         created_at: "تم انشائه في" #?
@@ -617,6 +621,13 @@ arb:
       account: "الحساب"
       account_balance: "رصيد الحساب"
       # animal: "Animaux"
+      # animal_event: "Evenements liés aux animaux"
+      # animal_event_nature: "Type d'évènement lié aux animaux"
+      # animal_group: "Lot"
+      # animal_race: "Race"
+      # animal_race_nature: "Espèce"
+      # animal_treatment: "Traitement"
+      # animal_treatment_use: "Dose lié à un traitement"
       area: "المنطقة البريدية"
       # asset: "Immobilisation"
       # asset_depreciation: "Amortissement d’immobilisation"
@@ -637,10 +648,15 @@ arb:
       department: "الخجمة"
       deposit: "الاقتطاع المصرفي"
       # deposit_line: "Ligne de remise en banque"
+      # diagnostic: "Diagnostic"
+      # disease: "Maladie"
       district: "مقاطعة"
       document: "الوثيقة"
       document_template: "نموذج الوثيقة"
+      # drug: "Médicament"
+      # drug_nature: "Type de médicament"
       entity: "الفرد"
+      # entity_address: "Adresse"
       entity_category: "فئة الفرد"
       entity_link: "رابط الفرد"
       entity_link_nature: "طبيعة الرابط بين الافراد"
@@ -681,6 +697,7 @@ arb:
       outgoing_payment_use: "تأثير الدفعة"
       parameter: "الاعدادات" #?
       # preference: "Préférence"
+      # prescription: "Ordonnance"
       price: "الاسعار"
       product: "الانتاج"
       product_category: "فئة الانتاج"
@@ -708,6 +725,7 @@ arb:
       tax: "الضريبة"
       tax_declaration: "تصريح الضرائب"
       tool: "الاداة"
+      # tool_nature: "Type d'équipements"
       tracking: "حصة ممكن عزوها"
       # tracking_state: "État de lot"
       transfer: "التحويل"
@@ -729,12 +747,16 @@ arb:
     activity_code: "APE/NAF رمز"
     actual_number: "الرقم الحالي"
     address: "العنوان"
+    # addresses: "Adresses"
     admin: "مسؤول النظام"
+    # age_max: "Age maximum"
+    # age_min: "Age minimum"
     agency_code: "رمز الوكالة"
     # allocation_account: "Compte de dotation"
     amount: "القيمة من دون الضرائب"
     amount_with_taxes: "القيمة مع كامل الضرائب" #?
     # animal: "Animaux"
+    # animal_events: "Evenement des animaux"
     # animal_group: "Lot"
     # animals: "Animals"
     annotation: "ملاحظة"
@@ -820,6 +842,7 @@ arb:
     closed: "تم اغلاقه"
     closed_on: "تاريخ الاغلاق"
     code: "الرمز"
+    # code_aee: "Code normalisé EDI*"
     code2: "الرمز الثاني"
     coefficient: "الدرجة"
     collected_account: "جمع قيمة الضريبة الاضافية"
@@ -888,6 +911,7 @@ arb:
     decimal_min: "انخفاض المدى"
     decimal_value: "القيمة العشرية"
     declared_on: "صرح يوم"
+    # default_address: "Coordonnée par défaut"
     default_contact: "الشخص المتوقع الاتصال به"
     default_currency: "العملة الافتراضية"
     # default_stock: "Stock par défaut"
@@ -953,10 +977,18 @@ arb:
     downpayment_rate: "معدل القسط"
     draft: "المسودة"
     draft_mode: "نمط المسودة"
+    # drug: "Médicament"
+    # drug_admission_path: "Drug admission path"
+    # drug_allowed: "Médicament utilisable sans prescription"
     # drugs: "Médicaments"
     duration: "المدة"
+    # duration_unit_wait_for_meat: "Duration unit wait for meat"
+    # duration_unit_wait_for_milk: "Duration unit wait for milk"
+    # duration_wait_for_meat: "Temps d'attente avant remise en vente (Viande)"
+    # duration_wait_for_milk: "Temps d'attente avant remise en vente (Lait)"
     ean13: "Ean13"
     email: "عنوان البريد الالكتروني"
+    # emails: "Courriels (e-mails)"
     # emitter_amount: "Montant émis"
     # emitter_cash: "Trésorerie émettrice"
     # emitter_currency: "Devise émise"
@@ -987,6 +1019,7 @@ arb:
     establishment: "المؤسسة"
     establishment_id: "مؤسسة" #?
     establishments: "المؤسسات"
+    # event: "Event"
     event_natures: "نوع الحدث"
     events: "الاحداث"
     # examinated_at: "Examiné le"
@@ -1024,6 +1057,7 @@ arb:
     for_purchases: "منتجات الشراء"
     for_sales: "منتجات البيع"
     format: "التصميم" #?
+    # frequency: "Frequency"
     full_name: "الاسم بالكامل"
     full_name_format: "التصميم"
     function_title: "الكياسة"
@@ -1143,6 +1177,7 @@ arb:
     name: "الاسم"
     name_1_to_2: "الملف الاول الى الثاني"
     name_2_to_1: "الملف الثاني الى الاول"
+    # name_aee: "Nom normalisé EDI*"
     nature: "طبيعة"
     nature_code: "الرمز"
     nature_id: "نوع" #?
@@ -1223,6 +1258,9 @@ arb:
     payments_count: "عدد الدفعات"
     payments_to_deposit: "دفعات الصندوق النقدي"
     payments_to_deposit_accounts: "حساب دفعات الصندوق النقدي"
+    # per_animal_unit: "Per animal unit"
+    # per_duration_time_unit: "Per duration time unit"
+    # per_frequency_time_unit: "Per frequency time unit"
     period: "الفترة"
     period_name: "تواتري"
     phone: "هاتف"
@@ -1236,8 +1274,16 @@ arb:
     planned_on: "قرر يوم"
     polygon: "متناسقين" #?
     position: "الوضع"
+    # posologies: "Posologies"
     postcode: "الرمز البريدي"
     preferences: "الاعدادات"
+    # pregnant: "Pleine"
+    # prescripted: "sur ordonnance"
+    # prescripted_on: "prescrit le"
+    # prescription: "Ordonnance"
+    # prescription_number: "référence de l’ordonnance"
+    # prescriptions: "Ordonnances"
+    # prescriptor: "Vétérinaire"
     # pretax_amount: "Montant HT"
     price: "سعر الكلفة"
     price_amount: "القيمة دون الضرائب"
@@ -1282,7 +1328,10 @@ arb:
     quantity: "الكمية"
     quantity_max: "الكمية كحد اقصى"
     quantity_min: "الكمية كحد ادنى"
+    # quantity_unit: "Quantity unit"
     query: "التساؤل"
+    # race: "Race"
+    # races: "Races"
     range: "فترة فاصلة"
     rate: "معدل سعر الصرف"
     reason: "الدافع"
@@ -1404,6 +1453,7 @@ arb:
     suspended: "معطل"
     symbol: "نموذج"
     symmetric: "متساو"
+    # symptoms: "Symptomes"
     target: "الهدف"
     target_id: "الهدف" #?
     # target_quantity: "Quantité cible"
@@ -1443,6 +1493,7 @@ arb:
     transporters: "ناقلات الشحن"
     transports: "وسائل النقل"
     # treatment: "Traitement"
+    # treatment_uses: "Treatment uses"
     # treatments: "Treatments"
     type: "النوع" #?
     undelivered_quantity: "يبقى للتسليم"
@@ -1464,6 +1515,7 @@ arb:
     # used_amount: "Montant utilisé"
     user: "المستخدم"
     user_id: "المستخدم" #?
+    # username: "Identifiant"
     users: "المستخدمين"
     uses: "المعدات المستخدمة"
     value: "القيمة"
