--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -9,6 +9,10 @@ jpn:
         # pregnant: "Surveillance de la gestation"
       animal_race:
         # code: "Code race"
+      animal_treatment_use:
+        # drug_admission_path: "Voie d’admission"
+        # per_animal_unit: " / "
+        # quantity_unit: "Unité"
       asset_depreciation:
         # asset_amount: "Valeur nette comptable (VNC)"
       cash:
@@ -235,6 +239,13 @@ jpn:
       # account: "Compte"
       # account_balance: "Balance de compte"
       # animal: "Animaux"
+      # animal_event: "Evenements liés aux animaux"
+      # animal_event_nature: "Type d'évènement lié aux animaux"
+      # animal_group: "Lot"
+      # animal_race: "Race"
+      # animal_race_nature: "Espèce"
+      # animal_treatment: "Traitement"
+      # animal_treatment_use: "Dose lié à un traitement"
       # area: "Zone postale"
       # asset: "Immobilisation"
       # asset_depreciation: "Amortissement d’immobilisation"
@@ -251,10 +262,15 @@ jpn:
       # department: "Service"
       # deposit: "Remise en banque"
       # deposit_line: "Ligne de remise en banque"
+      # diagnostic: "Diagnostic"
+      # disease: "Maladie"
       # district: "Zone administrative"
       # document: "Document"
       # document_template: "Modèle de document"
+      # drug: "Médicament"
+      # drug_nature: "Type de médicament"
       # entity: "Personne"
+      # entity_address: "Adresse"
       # entity_category: "Catégorie de personne"
       # entity_link: "Lien de personne"
       # entity_link_nature: "Nature de lien entre personnes"
@@ -293,6 +309,7 @@ jpn:
       # outgoing_payment_mode: "Mode de décaissement"
       # outgoing_payment_use: "Affectation de décaissement"
       # preference: "Préférence"
+      # prescription: "Ordonnance"
       # price: "Prix"
       # product: "Produit"
       # product_category: "Catégorie de produit"
@@ -318,6 +335,7 @@ jpn:
       # tax: "Taxe"
       # tax_declaration: "Déclaration de taxes"
       # tool: "Outil"
+      # tool_nature: "Type d'équipements"
       # tracking: "Lot traçable"
       # tracking_state: "État de lot"
       # transfer: "Transfert"
@@ -338,11 +356,15 @@ jpn:
     # activity_code: "Code APE/NAF"
     # actual_number: "Numéro en cours"
     # address: "Adresse"
+    # addresses: "Adresses"
     # admin: "Administrateur système"
+    # age_max: "Age maximum"
+    # age_min: "Age minimum"
     # agency_code: "Code guichet"
     # allocation_account: "Compte de dotation"
     # amount: "Montant"
     # animal: "Animaux"
+    # animal_events: "Evenement des animaux"
     # animal_group: "Lot"
     # animals: "Animals"
     # annotation: "Annotation"
@@ -419,6 +441,7 @@ jpn:
     # closed: "Clôturé"
     # closed_on: "Date de clôture"
     code: "コード"
+    # code_aee: "Code normalisé EDI*"
     # code2: "Code secondaire"
     # coefficient: "Coefficient"
     # collected_account: "TVA collectée"
@@ -479,6 +502,7 @@ jpn:
     # decimal_min: "Intervalle bas"
     # decimal_value: "Valeur décimale"
     # declared_on: "Déclarée le"
+    # default_address: "Coordonnée par défaut"
     # default_contact: "Contact par défaut"
     # default_currency: "Devise par défaut"
     # default_stock: "Stock par défaut"
@@ -533,10 +557,18 @@ jpn:
     # downpayment_rate: "Taux acompte"
     # draft: "Brouillard"
     # draft_mode: "Mode brouillard"
+    # drug: "Médicament"
+    # drug_admission_path: "Drug admission path"
+    # drug_allowed: "Médicament utilisable sans prescription"
     # drugs: "Médicaments"
     # duration: "Durée"
+    # duration_unit_wait_for_meat: "Duration unit wait for meat"
+    # duration_unit_wait_for_milk: "Duration unit wait for milk"
+    # duration_wait_for_meat: "Temps d'attente avant remise en vente (Viande)"
+    # duration_wait_for_milk: "Temps d'attente avant remise en vente (Lait)"
     # ean13: "Code EAN13"
     # email: "Courriel (e-mail)"
+    # emails: "Courriels (e-mails)"
     # emitter_amount: "Montant émis"
     # emitter_cash: "Trésorerie émettrice"
     # emitter_currency: "Devise émise"
@@ -561,6 +593,7 @@ jpn:
     # entry_lines: "Lignes d’écritures"
     # establishment: "Établissement"
     # establishments: "Établissements"
+    # event: "Event"
     # event_natures: "Types d’évènement"
     # events: "Évènements"
     # examinated_at: "Examiné le"
@@ -594,6 +627,7 @@ jpn:
     # for_productions: "Produit fabriqué ou récolté"
     # for_purchases: "Produit acheté"
     # for_sales: "Produit vendu"
+    # frequency: "Frequency"
     # full_name: "Nom complet"
     # full_name_format: "Format du nom complet"
     # function_title: "Civilités"
@@ -702,6 +736,7 @@ jpn:
     name: "名前"
     # name_1_to_2: "Personne 1 ⇒ Personne 2"
     # name_2_to_1: "Personne 2 ⇒ Personne 1"
+    # name_aee: "Nom normalisé EDI*"
     # nature: "Type"
     # nature_code: "Code"
     # nature_label: "Type"
@@ -769,6 +804,9 @@ jpn:
     # payments_count: "Nb. encaissements"
     # payments_to_deposit: "Encaissements à encaisser"
     # payments_to_deposit_accounts: "Comptes des encaissements à encaisser"
+    # per_animal_unit: "Per animal unit"
+    # per_duration_time_unit: "Per duration time unit"
+    # per_frequency_time_unit: "Per frequency time unit"
     # period: "Périodicité"
     # period_name: "Périodicité"
     # phone: "Téléphone"
@@ -781,8 +819,16 @@ jpn:
     # planned_depreciations: "Amortissements prévus"
     # planned_on: "Prévu le"
     # position: "Position"
+    # posologies: "Posologies"
     # postcode: "Code postal"
     # preferences: "Préférences"
+    # pregnant: "Pleine"
+    # prescripted: "sur ordonnance"
+    # prescripted_on: "prescrit le"
+    # prescription: "Ordonnance"
+    # prescription_number: "référence de l’ordonnance"
+    # prescriptions: "Ordonnances"
+    # prescriptor: "Vétérinaire"
     # pretax_amount: "Montant HT"
     # price: "Prix"
     # price_amount: "Montant HT"
@@ -819,7 +865,10 @@ jpn:
     # quantity: "Quantité"
     # quantity_max: "Quantité maximum"
     # quantity_min: "Quantité minimum"
+    # quantity_unit: "Quantity unit"
     # query: "Requête"
+    # race: "Race"
+    # races: "Races"
     # range: "Intervalle"
     # rate: "Taux de change"
     # reason: "Motif"
@@ -925,6 +974,7 @@ jpn:
     # suspended: "Suspendu"
     # symbol: "Symbole"
     # symmetric: "Symétrique"
+    # symptoms: "Symptomes"
     # target: "Parcelle"
     # target_quantity: "Quantité cible"
     # target_type: "Type de cible"
@@ -957,6 +1007,7 @@ jpn:
     # transporters: "Transporteurs"
     # transports: "Transports"
     # treatment: "Traitement"
+    # treatment_uses: "Treatment uses"
     # treatments: "Treatments"
     # undelivered_quantity: "Reste à livrer"
     # unique_tracking: "Numéro unique"
@@ -975,6 +1026,7 @@ jpn:
     # use_range: "Utiliser un intervalle de quantité"
     # used_amount: "Montant utilisé"
     # user: "Utilisateur"
+    # username: "Identifiant"
     # users: "Utilisateurs"
     # uses: "Matériels utilisés"
     # value: "Valeur"
