--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -9,6 +9,26 @@ fra:
       reconciliation: "Lettrage de comptes"
       show: "Compte\_: %{number} - %{name}"
       unmark: "Délettrer un compte"
+    animal_diagnostics:
+      edit: "Modifier un diagnostic"
+      index: "Diagnostic"
+      new: "Nouveau diagnostic"
+      show: "Diagnostic\_: %{name}"
+    animal_diseases:
+      edit: "Modifier la maladie\_: %{name}"
+      index: "Maladies"
+      new: "Nouvelle maladie"
+      show: "Maladie\_: %{name}"
+    animal_drug_natures:
+      edit: "Modifier le type de médicament\_: %{name}"
+      index: "Types de médicament"
+      new: "Nouveau type de médicament"
+      show: "Type de médicament\_: %{name}"
+    animal_drugs:
+      edit: "Modifier le médicament\_: %{name}"
+      index: "Médicaments"
+      new: "Nouveau médicament"
+      show: "Médicament\_: %{name}"
     animal_event_natures:
       edit: "Modifier un type d'évènement"
       index: "Type d'évènement"
@@ -24,6 +44,16 @@ fra:
       index: "Lots d'animaux"
       new: "Créer un lot"
       show: "Lot\_: %{name}"
+    animal_posologies:
+      edit: "Modifier une posologie"
+      index: "Posologie"
+      new: "Nouvelle posologie"
+      show: "Posologie\_: %{name}"
+    animal_prescriptions:
+      edit: "Modifier une ordonnance"
+      index: "Ordonnance"
+      new: "Nouvelle ordonnance"
+      show: "Ordonnance\_: %{name} du \_: %{prescripted_on}"
     animal_race_natures:
       edit: "Modifier le type de race\_: %{name} "
       index: "Type de race"
@@ -34,11 +64,6 @@ fra:
       index: "Races"
       new: "Créer une race"
       show: "Race\_: %{name}"
-    animal_treatment_uses:
-      edit: "Modifier la dose de traitement donnée"
-      index: "Dose de traitement donnée"
-      new: "Nouvelle dose de traitement"
-      show: "Dose de traitement\_: %{name}"
     animal_treatments:
       edit: "Modifier le traitement\_: %{name} "
       index: "Traitements"
@@ -115,16 +140,6 @@ fra:
       new: "Effectuer une remise"
       show: "Remise en banque %{number} du %{created_on}"
       unvalidateds: "Remises en banque non validées"
-    diagnostics:
-      edit: "Modifier un diagnostic"
-      index: "Diagnostic"
-      new: "Nouveau diagnostic"
-      show: "Diagnostic\_: %{name}"
-    diseases:
-      edit: "Modifier la maladie\_: %{name}"
-      index: "Maladies"
-      new: "Nouvelle maladie"
-      show: "Maladie\_: %{name}"
     districts:
       edit: "Modifier la zone administrative\_: %{name}"
       index: "Zones administratives"
@@ -135,16 +150,6 @@ fra:
       load: "Charger les modèles de document par défaut"
       new: "Création d’un modèle de document"
       print: "Imprimer un exemple"
-    drug_natures:
-      edit: "Modifier le type de médicament\_: %{name}"
-      index: "Types de médicament"
-      new: "Nouveau type de médicament"
-      show: "Type de médicament\_: %{name}"
-    drugs:
-      edit: "Modifier le médicament\_: %{name}"
-      index: "Médicaments"
-      new: "Nouveau médicament"
-      show: "Médicament\_: %{name}"
     entities:
       destroy: "Supprimer la fiche" #?
       edit: "Modifier la fiche\_: %{full_name}"
@@ -306,11 +311,11 @@ fra:
       index: "Décaissements"
       new: "Ajout d’un décaissement"
       show: "Décaissement n°%{number} pour %{payee}"
-    prescriptions:
-      edit: "Modifier une ordonnance"
-      index: "Ordonnance"
-      new: "Nouvelle ordonnance"
-      show: "Ordonnance\_: %{name} du \_: %{prescripted_on}"
+    preferences:
+      # edit: "Edit preference"
+      # index: "Index preference"
+      # new: "New preference"
+      # show: "Show preference"
     prices:
       edit: "Modifie le prix %{pretax_amount}/%{amount} sur %{product}"
       export: "Exporter les prix"
@@ -485,12 +490,17 @@ fra:
     account_balances: "Soldes de comptes"
     accounts: "Plan de comptes"
     # admin: "Admin"
+    # animal_diagnostics: "Animal diagnostics"
+    # animal_diseases: "Animal diseases"
+    # animal_drug_natures: "Animal drug natures"
+    # animal_drugs: "Animal drugs"
     animal_event_natures: "Type d'évenements des Animaux"
     animal_events: "Evenements des Animaux"
     animal_groups: "Lot d'Animaux"
+    # animal_posologies: "Animal posologies"
+    # animal_prescriptions: "Animal prescriptions"
     animal_race_natures: "Espèces animales"
     animal_races: "Races"
-    animal_treatment_uses: "Doses de traitement"
     animal_treatments: "Soins des Animaux"
     animals: "Animaux"
     application: "Application"
@@ -511,13 +521,9 @@ fra:
     departments: "Services"
     deposit_lines: "Lignes de remise en banque"
     deposits: "Remises en banque"
-    diagnostics: "Diagnostics"
-    diseases: "Maladies"
     districts: "Zones administratives"
     document_templates: "Modèles de document"
     documents: "Documents"
-    drug_natures: "Types de médicaments"
-    drugs: "Médicaments"
     entities: "Personnes"
     entity_addresses: "Adresses"
     entity_categories: "Catégories de fiche"
@@ -561,7 +567,6 @@ fra:
     outgoing_payment_uses: "Utilisations des décaissements"
     outgoing_payments: "Décaissements"
     preferences: "Préférences"
-    prescriptions: "Ordonnances"
     prices: "Prix"
     product_categories: "Catégories de produits"
     product_components: "Composants de produits"
