--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -13,7 +13,31 @@ jpn:
     animal_care_natures: #?
     animal_care_types: #?
     animal_cares: #?
-    animal_event_natures: #?
+    animal_diagnostics:
+      # edit: "Modifier un diagnostic"
+      # index: "Diagnostic"
+      # new: "Nouveau diagnostic"
+      # show: "Diagnostic\_: %{name}"
+    animal_diseases:
+      # edit: "Modifier la maladie\_: %{name}"
+      # index: "Maladies"
+      # new: "Nouvelle maladie"
+      # show: "Maladie\_: %{name}"
+    animal_drug_natures:
+      # edit: "Modifier le type de médicament\_: %{name}"
+      # index: "Types de médicament"
+      # new: "Nouveau type de médicament"
+      # show: "Type de médicament\_: %{name}"
+    animal_drugs:
+      # edit: "Modifier le médicament\_: %{name}"
+      # index: "Médicaments"
+      # new: "Nouveau médicament"
+      # show: "Médicament\_: %{name}"
+    animal_event_natures:
+      # edit: "Modifier un type d'évènement"
+      # index: "Type d'évènement"
+      # new: "Créer un type d'évènement"
+      # show: "Type d'évènement %{name}"
     animal_events:
       # edit: "Modifier un évènement"
       # index: "Evènements"
@@ -24,6 +48,16 @@ jpn:
       # index: "Lots d'animaux"
       # new: "Créer un lot"
       # show: "Lot\_: %{name}"
+    animal_posologies:
+      # edit: "Modifier une posologie"
+      # index: "Posologie"
+      # new: "Nouvelle posologie"
+      # show: "Posologie\_: %{name}"
+    animal_prescriptions:
+      # edit: "Modifier une ordonnance"
+      # index: "Ordonnance"
+      # new: "Nouvelle ordonnance"
+      # show: "Ordonnance\_: %{name} du \_: %{prescripted_on}"
     animal_race_natures:
       # edit: "Modifier le type de race\_: %{name} "
       # index: "Type de race"
@@ -35,6 +69,7 @@ jpn:
       # index: "Races"
       # new: "Créer une race"
       # show: "Race\_: %{name}"
+    animal_treatment_uses: #?
     animal_treatments:
       # edit: "Modifier le traitement\_: %{name} "
       # index: "Traitements"
@@ -121,11 +156,7 @@ jpn:
       # show: "Remise en banque %{number} du %{created_on}"
       # unvalidateds: "Remises en banque non validées"
     diagnostics: #?
-    diseases:
-      # edit: "Modifier la maladie\_: %{name}"
-      # index: "Maladies"
-      # new: "Nouvelle maladie"
-      # show: "Maladie\_: %{name}"
+    diseases: #?
     districts:
       # edit: "Modifier la zone administrative\_: %{name}"
       # index: "Zones administratives"
@@ -137,17 +168,9 @@ jpn:
       # new: "Création d’un modèle de document"
       # print: "Imprimer un exemple"
     documents: #?
-    drug_natures:
-      # edit: "Modifier le type de médicament\_: %{name}"
-      # index: "Types de médicament"
-      # new: "Nouveau type de médicament"
-      # show: "Type de médicament\_: %{name}"
+    drug_natures: #?
     drug_types: #?
-    drugs:
-      # edit: "Modifier le médicament\_: %{name}"
-      # index: "Médicaments"
-      # new: "Nouveau médicament"
-      # show: "Médicament\_: %{name}"
+    drugs: #?
     entities:
       # destroy: "Supprimer la fiche"
       # edit: "Modifier la fiche\_: %{full_name}"
@@ -157,7 +180,9 @@ jpn:
       # merge: "Fusionner un doublon à sa fiche d’origine"
       # new: "Nouvelle fiche client/fournisseur"
       # show: "Fiche\_: %{full_name}"
-    entity_addresses: #?
+    entity_addresses:
+      # edit: "Modifier une coordonnée"
+      # new: "Ajouter une coordonnée"
     entity_categories:
       # edit: "Modifier la catégorie de fiche\_: %{name}"
       # index: "Catégories de fiche"
@@ -313,7 +338,9 @@ jpn:
       # index: "Décaissements"
       # new: "Ajout d’un décaissement"
       # show: "Décaissement n°%{number} pour %{payee}"
+    posologies: #?
     preferences: #?
+    prescriptions: #?
     prices:
       # edit: "Modifie le prix %{pretax_amount}/%{amount} sur %{product}"
       # export: "Exporter les prix"
@@ -449,7 +476,11 @@ jpn:
       # edit: "Modifier la taxe\_: %{name}"
       # index: "Taxes"
       # new: "Ajouter une nouvelle taxe"
-    tool_natures: #?
+    tool_natures:
+      # edit: "Modifier un type de matériel"
+      # index: "Type de matériel / équipement"
+      # new: "Nouveau type de matériel"
+      # show: "Type de matériel\_: %{name}"
     tools:
       # edit: "Modifier le matériel\_: %{name}"
       # index: "Matériel"
@@ -490,6 +521,8 @@ jpn:
     # animal_event_natures: "Type d'évenements des Animaux"
     # animal_events: "Evenements des Animaux"
     # animal_groups: "Lot d'Animaux"
+    # animal_race_natures: "Espèces animales"
+    # animal_races: "Races"
     # animal_treatments: "Soins des Animaux"
     # animals: "Animaux"
     application: "一般的な車掌"
@@ -510,12 +543,11 @@ jpn:
     # departments: "Services"
     # deposit_lines: "Lignes de remise en banque"
     # deposits: "Remises en banque"
-    # diseases: "Maladies"
     # districts: "Zones administratives"
     # document_templates: "Modèles de document"
     # documents: "Documents"
-    # drugs: "Médicaments"
     # entities: "Personnes"
+    # entity_addresses: "Adresses"
     # entity_categories: "Catégories de fiche"
     # entity_link_natures: "Types de lien"
     # entity_links: "Liens entre personnes"
@@ -653,6 +685,7 @@ jpn:
     # amount_to_add: "Sommes à ajouter, exprimées en euros, y compris acompte congés"
     # amount_to_reduce: "Sommes à imputer, exprimées en euros, y compris acompte congés"
     # amount_with_taxes: "Montant TTC"
+    # animal: "Animal"
     animal_group_tabbox:
       # animals: "Animaux du lot"
       # cares: "Soins réalisés sur le lot"
@@ -771,8 +804,8 @@ jpn:
     # debit: "Débit"
     # decimal_case: "Options pour un décimal"
     # default_subject: "[%{company}]"
+    # delay: "Délais"
     # delay_update: "Modifier le délai"
-    # delays: "Délais"
     # delete: "Supprimer"
     # deliver: "Valider l’envoi des livraisons"
     # deliveries: "Livraisons"
