working on animals model and reporting

--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -38,7 +38,7 @@ fra:
       edit: "Modifier un évènement"
       index: "Evènements"
       new: "Créer un évènement"
-      show: "évènement %{name} commencé le %{started_on}"
+      show: "évènement %{name} commencé le %{started_at}"
     animal_groups:
       edit: "Modifier le lot\_: %{name} "
       index: "Lots d'animaux"
@@ -490,15 +490,15 @@ fra:
     account_balances: "Soldes de comptes"
     accounts: "Plan de comptes"
     # admin: "Admin"
-    # animal_diagnostics: "Animal diagnostics"
-    # animal_diseases: "Animal diseases"
-    # animal_drug_natures: "Animal drug natures"
-    # animal_drugs: "Animal drugs"
+    animal_diagnostics: "Diagnostics"
+    animal_diseases: "Maladies"
+    animal_drug_natures: "Type de médicaments"
+    animal_drugs: "Médicaments"
     animal_event_natures: "Type d'évenements des Animaux"
     animal_events: "Evenements des Animaux"
     animal_groups: "Lot d'Animaux"
-    # animal_posologies: "Animal posologies"
-    # animal_prescriptions: "Animal prescriptions"
+    animal_posologies: "Posologies"
+    animal_prescriptions: "Ordonnances vétérinaires"
     animal_race_natures: "Espèces animales"
     animal_races: "Races"
     animal_treatments: "Soins des Animaux"
@@ -593,7 +593,7 @@ fra:
     subscriptions: "Abonnements"
     tax_declarations: "Déclaration de TVA"
     taxes: "Taxes"
-    # tool_natures: "Tool natures"
+    tool_natures: "Type de matériels"
     tools: "Matériel"
     tracking_states: "État des lots de traçabilité"
     trackings: "Lots de traçabilité"
