--- a/config/locales/fra/help/animal_events-index.txt
+++ b/config/locales/fra/help/animal_events-index.txt
@@ -1,10 +1,23 @@
-====== Soins ======
+====== Evenements liés aux animaux ======
 
-Les soins peuvent concerner un [[>animals/index|animal]] ou un groupe d'animaux [[>animal_groups/index|groupe d'animaux]]
+Les évènements peuvent concerner un [[>animals/index|animal]] ou un groupe d'animaux [[>animal_groups/index|groupe d'animaux]].
 
-===== Gestion de la pharmacie =====
+Ils sont catégorisés [[>animal_event_natures/index|catégorisés]]
 
-Vous pouvez gérer une pharmacie pour votre exploitation avec la listes des [[>drugs/index|médicaments]] utilisés pour vos soins
+
+
+===== Diagnostic =====
+
+Un diagnostic peut correspondre à une suspicion de [[>animal_diseases/index|maladies]]
+
+
+
+===== Traitement =====
+
+Un evenement de type Traitement suppose l'existence d'un diagnostic avant de réaliser un [[>animal_treatments/index|traitements]].
+Certains traitements necessitent une [[>animal_prescriptions/index|ordonnance]]
+
+Vous pouvez gérer une pharmacie pour votre exploitation avec la listes des [[>animal_drugs/index|médicaments]] utilisés pour vos soins
 Cette pharmacie peut être directement liée à votre stock de produit
 
 Le type de compte est défini **à la création**. Vous ne pourrez pas le modifier une fois créé. 
