--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -1189,59 +1189,6 @@ fra:
             admin: "Gérant"
             public: "Public (sans droits)"
         sale_nature_name: "Vente standard"
-        sequences:
-          assets:
-            name: "Numérotation des immobilisations"
-            number_format: "I[number|7]"
-          cash_transfers:
-            name: "Numérotation des virements internes"
-            number_format: "VI[year|4][number|4]"
-            period: "year"
-          deposits:
-            name: "Numérotation des remises en banque"
-            number_format: "B[year|4][number|4]"
-            period: "year"
-          entities:
-            name: "Numérotation des personnes"
-            number_format: "[number|8]"
-          incoming_deliveries:
-            name: "Numérotation des bons de réceptions"
-            number_format: "BR[year|4][number|4]"
-            period: "year"
-          incoming_payments:
-            name: "Numérotation des encaissements"
-            number_format: "R[year|4][number|6]"
-            period: "year"
-          outgoing_deliveries:
-            name: "Numérotation des bons de livraisons"
-            number_format: "BL[year|4][number|6]"
-            period: "year"
-          outgoing_payments:
-            name: "Numérotation des décaissements"
-            number_format: "D[year|4][number|4]"
-            period: "year"
-          purchases:
-            name: "Numérotation des achats"
-            number_format: "A[year|4][month|2][number|6]"
-            period: "month"
-          sales:
-            name: "Numérotation des ventes"
-            number_format: "V[year|4][month|2][number|6]"
-            period: "month"
-          sales_invoices:
-            name: "Numérotation des factures"
-            number_format: "F[year|4][number|6]"
-            period: "year"
-          stock_transfers:
-            name: "Numérotation des transferts de stock"
-            number_format: "TS[year|4][number|4]"
-            period: "year"
-          subscriptions:
-            name: "Numérotation des abonnements"
-            number_format: "ABO[number|8]"
-          transports:
-            name: "Numérotation des transports"
-            number_format: "TR[number|8]"
         taxes:
           tva0000:
             amount: "0.0"
@@ -1263,18 +1210,6 @@ fra:
             collected: "445713"
             name: "TVA 19,60%"
             paid: "445663"
-        units:
-          a: "Are"
-          ca: "Centiare (m²)"
-          ha: "Hectare"
-          hl: "Hectolitre"
-          kg: "Kilogramme"
-          km: "Kilomètre"
-          l: "Litre"
-          m: "Mètre"
-          m3: "Mètre cube"
-          t: "Tonne"
-          u: "Unité"
         warehouse_name: "Réserve"
       import:
         dont_use: "-- Ne pas utiliser --"
@@ -1509,6 +1444,60 @@ fra:
         month: "Mois"
         number: "-- Aucune --"
         year: "Année"
+      default:
+        assets:
+          name: "Numérotation des immobilisations"
+          number_format: "I[number|7]"
+        cash_transfers:
+          name: "Numérotation des virements internes"
+          number_format: "VI[year|4][number|4]"
+          period: "year"
+        deposits:
+          name: "Numérotation des remises en banque"
+          number_format: "B[year|4][number|4]"
+          period: "year"
+        entities:
+          name: "Numérotation des personnes"
+          number_format: "[number|8]"
+        incoming_deliveries:
+          name: "Numérotation des bons de réceptions"
+          number_format: "BR[year|4][number|4]"
+          period: "year"
+        incoming_payments:
+          name: "Numérotation des encaissements"
+          number_format: "R[year|4][number|6]"
+          period: "year"
+        outgoing_deliveries:
+          name: "Numérotation des bons de livraisons"
+          number_format: "BL[year|4][number|6]"
+          period: "year"
+        outgoing_payments:
+          name: "Numérotation des décaissements"
+          number_format: "D[year|4][number|4]"
+          period: "year"
+        purchases:
+          name: "Numérotation des achats"
+          number_format: "A[year|4][month|2][number|6]"
+          period: "month"
+        sales:
+          name: "Numérotation des ventes"
+          number_format: "V[year|4][month|2][number|6]"
+          period: "month"
+        sales_invoices:
+          name: "Numérotation des factures"
+          number_format: "F[year|4][number|6]"
+          period: "year"
+        stock_transfers:
+          name: "Numérotation des transferts de stock"
+          number_format: "TS[year|4][number|4]"
+          period: "year"
+        subscriptions:
+          name: "Numérotation des abonnements"
+          number_format: "ABO[number|8]"
+        transports:
+          name: "Numérotation des transports"
+          number_format: "TR[number|8]"
+
     stock:
       default_name: "%{warehouse}/%{product}/%{tracking}"
       label:
@@ -1543,6 +1532,19 @@ fra:
         other: "Autres"
         towed: "Attelage"
         tractor: "Tracteur"
+    unit:
+      default:
+        a: "Are"
+        ca: "Centiare (m²)"
+        ha: "Hectare"
+        hl: "Hectolitre"
+        kg: "Kilogramme"
+        km: "Kilomètre"
+        l: "Litre"
+        m: "Mètre"
+        m3: "Mètre cube"
+        t: "Tonne"
+        u: "Unité"
     user: #?
       no_right_defined_for_this_part_of_the_application: "Aucun droit défini pour cette partie de l’application\_: %{controller}/%{action}" #?
       no_right_defined_for_this_part_of_the_application_and_this_user: "Vous n’avez pas accès à cette partie de l’application"
